# facefeature-project

./: CMakeLists.txt  main.cpp
Common/: kl_image_data.hpp  kl_mat_transform.hpp  kl_rt_onnx_base_v7.cpp  kl_rt_onnx_base_v7.h  kl_rt_tensor.hpp  kl_syncedmem.cpp  kl_syncedmem.h  kl_tensor_transform.hpp
Common/onnx_base/: onnx_dynamic_reshape_base_v1.cpp  onnx_dynamic_reshape_base_v1.h
cmake/: Cuda.cmake  FindLibTorch.cmake  FindOpenCV.cmake  KLTensorRT.cmake
face_align/: face_align_api.cpp  face_align_api.h  kl_ali_infer.cpp  kl_ali_infer.h  kl_alignface.cpp  kl_alignface.h
face_feature_me/: face_extractor_rt.cpp  face_extractor_rt.h  kl_face_infer.cpp  kl_face_infer.h
face_feature_me_v2/: face_feature_v2.cpp  face_feature_v2.h  face_feature_v2_api.cpp  face_feature_v2_api.h
face_quality/: face_quality.cpp  face_quality.h  face_quality_api.cpp  face_quality_api.h
